# 3D_.obj_Files_Viewer_v1.0

./: README.md  README_RUS.md
src/: Makefile  manual.texi
src/3D_Viewer/: CMakeLists.txt  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/backend/: readobj.c  readobj.h
src/tests/: test.c  test.h
